--- a/package.json
+++ b/package.json
@@ -1,23 +1,39 @@
 {
-  "name": "codewise",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start"
-  },
-  "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.4"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
-  }
+	"name": "codewise",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build --turbopack",
+		"start": "next start",
+		"lint": "next lint",
+		"postbuild": "next-sitemap"
+	},
+	"dependencies": {
+		"@tailwindcss/typography": "^0.5.19",
+		"framer-motion": "^12.23.22",
+		"gray-matter": "^4.0.3",
+		"lucide-react": "^0.545.0",
+		"next": "15.5.4",
+		"next-mdx-remote": "^5.0.0",
+		"next-seo": "^6.8.0",
+		"next-sitemap": "^4.2.3",
+		"openai": "^6.2.0",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"react-hot-toast": "^2.6.0",
+		"reading-time": "^1.5.0",
+		"rehype-prism-plus": "^2.0.1",
+		"remark-gfm": "^4.0.1"
+	},
+	"devDependencies": {
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^8",
+		"eslint-config-next": "15.5.4",
+		"tailwindcss": "^4",
+		"typescript": "^5"
+	}
 }
