--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@tailwindcss/typography": "^0.5.19",
+		"@vercel/speed-insights": "^1.2.0",
 		"framer-motion": "^12.23.22",
 		"gray-matter": "^4.0.3",
 		"lucide-react": "^0.545.0",
