--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"critters": "^0.0.25",
 		"eslint": "^8",
 		"eslint-config-next": "15.5.4",
 		"tailwindcss": "^4",
