--- a/.github/workflows/daily-blog.yml
+++ b/.github/workflows/daily-blog.yml
@@ -48,6 +48,7 @@ jobs:
         id: check_changes
         run: |
           git add src/content/blog/
+          git add public/images/blog
           if git diff --staged --quiet; then
             echo "changes=false" >> $GITHUB_OUTPUT
             echo "No new blog post generated or file already exists"
