--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@tailwindcss/typography": "^0.5.19",
+		"@vercel/analytics": "^1.6.1",
 		"@vercel/speed-insights": "^1.2.0",
 		"dotenv": "^17.2.3",
 		"framer-motion": "^12.23.22",
